--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -30,46 +30,46 @@
 	</div>
 	<div class="sign">
 		<p class="title">报名信息</p>
-		<div id="text_row" class="row">
+		<di class="row text_row">
 			<div class="col-xs-4"><p class="text">学员手机</p></div>
 			<div class="col-xs-8"><input class="input" id="tel" type="text" ></div>
 		</div>
-		<div id="text_row" class="row">
+		<div class="row">
 			<div class="col-xs-4"><p class="text">电子邮件</p></div>
 			<div class="col-xs-8"><input class="input" id="email" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div class="row">
 			<div class="col-xs-4"><p class="text">学员姓名</p></div>
 			<div class="col-xs-8"><input class="input" id="name" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div class="row">
 			<div class="col-xs-4"><p class="text">性别</p></div>
 			<div class="col-xs-8">
 				<div class="radio">
                   <label>
-                    <input type="radio" name="sexRadio" checked="checked" id="radio1" value="男">男
+                    <input type="radio" name="sexRadio" checked="checked"  value="男">男
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="sexRadio" id="radio1" value="女">女
+                    <input type="radio" name="sexRadio"  value="女">女
                   </label>
                 </div>
 			</div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">就读学校</p></div>
 			<div class="col-xs-8"><input class="input" id="school" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">就读年级</p></div>
 			<div class="col-xs-8"><input class="input" id="grade" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">就读班级</p></div>
 			<div class="col-xs-8"><input class="input" id="class" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">出生日期</p></div>
 			<div class="col-xs-8">
 				<input class="input" id="birth" type="text">
@@ -79,71 +79,71 @@
 	</div>
 
 	<div class="other">
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">父亲姓名</p></div>
 			<div class="col-xs-8"><input class="input" id="f_name" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">父亲手机</p></div>
 			<div class="col-xs-8"><input class="input" id="f_tel" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">母亲姓名</p></div>
 			<div class="col-xs-8"><input class="input" id="m_name" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">母亲手机</p></div>
 			<div class="col-xs-8"><input class="input" id="m_tel" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">宅电</p></div>
 			<div class="col-xs-8"><input class="input" id="telephone" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">快递详细地址</p></div>
 			<div class="col-xs-8"><input class="input" id="address" type="text"></div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">填表人</p></div>
 			<div class="col-xs-8">
 				<div class="radio">
                   <label>
-                    <input type="radio" name="inputerRadio" checked="checked" id="radio1" value="父亲">父亲
+                    <input type="radio" name="inputerRadio" checked="checked"  value="父亲">父亲
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="inputerRadio" id="radio1" value="母亲">母亲
+                    <input type="radio" name="inputerRadio"  value="母亲">母亲
                   </label>
                 </div>
 			</div>
 		</div>
-		<div id="text_row" class="row">
+		<div  class="row">
 			<div class="col-xs-4"><p class="text">你是通过什么渠道了解我们的</p></div>
 			<div class="col-xs-8">
 				<div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio" checked="checked" id="radio1" value="1">演讲
+                    <input type="radio" name="channelRadio" checked="checked"  value="1">演讲
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio" id="radio1" value="2">网络搜索
+                    <input type="radio" name="channelRadio"  value="2">网络搜索
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio" id="radio1" value="3">摩英教育微信公众账号
+                    <input type="radio" name="channelRadio"  value="3">摩英教育微信公众账号
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio" id="radio1" value="4">微信朋友圈
+                    <input type="radio" name="channelRadio"  value="4">微信朋友圈
                   </label>
                 </div>
                  <div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio" id="radio1" value="5">其他学员介绍
+                    <input type="radio" name="channelRadio"  value="5">其他学员介绍
                   </label>
                 </div>
 			</div>
