修改预约界面部分bug

--- a/Views/book/booksuccess.html
+++ b/Views/book/booksuccess.html
@@ -3,6 +3,9 @@
 <head>
 	<title>预约结果</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="email=no"/>
 	<meta name="description" content="course web for morden">
 	<meta name="author" content="vjchu">
 	  <link rel="stylesheet" type="text/css" href="../../Css/book/booksuccess.css">
