--- a/Views/Admin/Manage/Login.html
+++ b/Views/Admin/Manage/Login.html
@@ -14,14 +14,14 @@
             background-color: #00b38a;
         }
         .logo {
-            background: url("../../../Images/logo.ico") left top no-repeat;
+            /*background: url("../../../Images/logo.png") left top no-repeat;*/
             position: absolute;
             z-index: 99;
             top: 70px;
             left: 136px;
             display: inline-block;
-            width: 128px;
-            height: 54px;
+            width: 203px;
+            height: 66px;
         }
         .content {
             position: relative;
@@ -69,7 +69,8 @@
 </head>
 <body>
 <div class="header">
-    <a href="#" class="logo"></a>
+    <!--<a href="#" class="logo"></a>-->
+    <img class="logo" src="../../../Images/logo.png">
 </div>
 <div class="content cleafix">
     <div class="input_area">
@@ -93,6 +94,7 @@
 </footer>
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
 <script src="../../../Framework/laypage-v1.3/laypage/laypage.js"></script>
