--- a/Views/Admin/Course/CourseRegistrationList.html
+++ b/Views/Admin/Course/CourseRegistrationList.html
@@ -58,11 +58,17 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <div id="Page"></div>
+        </div>
+    </div>
 </div>
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
+<script src="../../../Framework/laypage-v1.3/laypage/laypage.js"></script>
 <script src="../../../Scripts/Admin/CourseReservationList.js"></script>
 </body>
 </html>
