--- a/Views/book/booking.html
+++ b/Views/book/booking.html
@@ -23,28 +23,30 @@
  </head>
  
   <body>
-    <div id="contacts">
-      <ul class="list">
-      <li class="list-li">
-          
+    <div class="content"><img id="contentImg" src="">
+      <div id="contacts">
+        <ul class="list">
+        <li class="list-li">
+            
 
-      </li>
-    </ul>
-  </div>
-    <!--navbar-fixed-bottom-->
-    <div style="height: 60px;width: 100%;"></div>
-    <div class="container navbar-fixed-bottom" style="background: #FFF;">
-        <div class="row" style="border-top: 1px solid #EEEEEE;">
-            <div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">
-                <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
-            </div>
-            <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
-                <a style="color: #F24C4C;" href="/Course/Views/book/booking.html">我的预约</a>
-            </div>
-            <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
-                <a style="color: #000;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>
-            </div>
-        </div>
+        </li>
+      </ul>
+    </div>
+      <!--navbar-fixed-bottom-->
+      <div style="height: 60px;width: 100%;"></div>
+      <div class="container navbar-fixed-bottom" style="background: #FFF;">
+          <div class="row" style="border-top: 1px solid #EEEEEE;">
+              <div class="col-xs-4" style="height: 50px;line-height: 50px;text-align: center;font-size: 16px;">
+                  <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
+              </div>
+              <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
+                  <a style="color: #F24C4C;" href="/Course/Views/book/booking.html">我的预约</a>
+              </div>
+              <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;text-align: center;font-size: 16px;">
+                  <a style="color: #000;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>
+              </div>
+          </div>
+      </div>
     </div>
     <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
