--- a/Views/Admin/Order/PhaseOrder.html
+++ b/Views/Admin/Order/PhaseOrder.html
@@ -25,8 +25,18 @@
         <div class="col-xs-5 text-left">
             <h4><strong id="paseName"></strong></h4>
         </div>
-        <div class="col-xs-7 text-right">
-            <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
+        <div class="col-xs-2" style="margin-top: 5px;">
+            <select class="form-control" id="Select">
+                <option value="0">全部</option>
+                <option value="1">预约中</option>
+                <option value="2">候补中</option>
+                <option value="3">预约成功</option>
+                <option value="4">已签到</option>
+                <option value="5">已退费</option>
+            </select>
+        </div>
+        <div class="col-xs-5 text-right">
+            <input type="text" style="width: 50%" id="SearchKey" placeholder="请输入搜索关键字"/>
             <button id="btnSearch">搜 索</button>
             <button id="btnAdd">手动录入</button>
             <button id="btnImport">导出Excel</button>
