--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div class="top" style="margin-top: 0">
-		<div style="text-align: center;" ><h3 id="course_title">摩英青少年领袖特训营</h3></div>
+		<div style="text-align: center;" ><h3 id="course_title"></h3></div>
 		<div class="container">
 		</div>
 	</div>
