--- a/Views/transfer/transfer.html
+++ b/Views/transfer/transfer.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
-  <meta name="format-detection" content="telephone=no"/>
-  <meta name="format-detection" content="email=no"/>
-	<meta name="description" content="course web for morden">
-	<meta name="author" content="vjchu">
-  <link rel="stylesheet" type="text/css" href="../../Css/transfer/transfer.css">
-	<link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
-	<title>转期课程</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="email=no"/>
+    <meta name="description" content="course web for morden">
+    <meta name="author" content="vjchu">
+    <link rel="stylesheet" type="text/css" href="../../Css/transfer/transfer.css">
+    <link rel="stylesheet" type="text/css" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
+    <title>转期课程</title>
 </head>
 <style type="text/css">
-	body{background-color: #E6E6E6}
+    body {
+        background-color: #E6E6E6
+    }
 </style>
 
 <body>
-  	<div class="container">
-  		<div class="row">
-  			<div class="col-xs-4" >
-  				<p class="p">已预约课程</p>
-  			</div>
-  			<div class="col-xs-8">
-         <p id="my-course"></p>
-  			</div>
-  		</div>
-  		<div class="row">
-  			<div class="col-xs-4" >
-  				<p class="p">可转期课程</p>
-  			</div>
-  			<div class="col-xs-8">
-           <button id="course-list"></button>
-  			</div>
-  		</div>
-  	</div>
-    
-    <center>
-      <button id="sureButton">确认修改</button>
-    </center>
-    
-    <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
-    <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
-    <script src="../../Scripts/Commen/CourseCommen.js"></script>
-    <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.js"></script>
-    <script src="../../Framework/layer_mobile/layer.js"></script>
-    <script src="../../Scripts/transfer/transfer.js"></script>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-4" style="padding-left: 15px;padding-right: 5px">
+            <p class="p">已预约课程</p>
+        </div>
+        <div class="col-xs-8"  style="padding-left: 5px;padding-right: 15px">
+            <p id="my-course"></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-4" style="padding-left: 15px;padding-right: 5px">
+            <p class="p">可转期课程</p>
+        </div>
+        <div class="col-xs-8"  style="padding-left: 5px;padding-right: 15px">
+            <button id="course-list"></button>
+        </div>
+    </div>
+</div>
+
+<center>
+    <button id="sureButton">确认修改</button>
+</center>
+
+<script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+<script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Framework/Bootstrap3.3.0/js/bootstrap.js"></script>
+<script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/transfer/transfer.js"></script>
 
 </body>
 </html>
