--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -70,6 +70,13 @@
         <div class="col-xs-9 pr15 pl5">
             <input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>
     </div>
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-8 pl15 pr5">
+            <input type="text" id="QrCode" name="QrCode" placeholder="请输入右边图形验证码"/></div>
+        <div class="col-xs-4 pr15 pl5">
+            <canvas class="J_codeimg" style="width: 100%;height: 40px;" id="myCanvas" onclick="createCode()">对不起，您的浏览器不支持canvas，请下载最新版浏览器!</canvas>
+        </div>
+    </div>
     <div class="row pdtb15">
         <div class="col-xs-12 text-right">
             <button id="btnReg">注 册</button>
@@ -89,6 +96,8 @@
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Framework/QrCode/jquery.qrcode.min.js"></script>
+<script src="../../Framework/QrCode/verificationNumbers.js"></script>
 <script src="../../Scripts/Account/Register.js"></script>
 </body>
 </html>
