修改登录界面

--- a/Views/Account/RetrievePassword.html
+++ b/Views/Account/RetrievePassword.html
@@ -83,25 +83,12 @@
         </div>
     </div>
 </div>
-<div class="container navbar-fixed-bottom">
-    <div class="row" style="border-top: 1px solid #EEEEEE;">
-        <div  class="col-xs-4" style="height: 50px;line-height: 50px;">
-            <a style="color: #000;" href="/Course/Views/Appointment/CourseList.html">课程介绍</a>
-        </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;">
-            <a style="color: #000;" href="/Course/Views/book/booking.html">我的预约</a>
-        </div>
-        <div class="col-xs-4" style="height: 50px;line-height: 50px;border-left: 1px solid #eee;">
-            <a style="color: #F24C4C;" href="/Course/Views/Account/PersonalCenter.html">个人中心</a>
-        </div>
-    </div>
-</div>
 
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
-<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
+<!--<script src="../../Scripts/Commen/CheckUserLogin.js"></script>-->
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../Scripts/Account/RetrievePassword.js"></script>
 </body>
