--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -46,20 +46,35 @@
         }
     </style>
 </head>
-<body>
+<body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
 <div class="container">
-    <div class="row pdtb15 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <span class="pdtb10 display_block">手机号：</span></div>
-        <div class="col-xs-9 pr15 pl5">
-            <input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>
+    <!--<div class="row pdtb15 border_btm">-->
+        <!--<div class="col-xs-3 pl15 pr5">-->
+            <!--<span class="pdtb10 display_block">手机号：</span></div>-->
+        <!--<div class="col-xs-9 pr15 pl5">-->
+            <!--<input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>-->
+    <!--</div>-->
+    <!--<div class="row pdtb15 border_btm">-->
+        <!--<div class="col-xs-3 pl15 pr5">-->
+            <!--<sapn class="pdtb10 display_block">密码：</sapn>-->
+        <!--</div>-->
+        <!--<div class="col-xs-9 pr15 pl5">-->
+            <!--<input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>-->
+    <!--</div>-->
+    <div style="text-align: center;padding-bottom: 50px;padding-top: 60px;">
+        <img src="../../Images/account/Account_Logo.png" style="height: 103px;width: 97px;"/>
+        <p style="font-size: 24px;color: red;">摩英教育</p>
     </div>
-    <div class="row pdtb15 border_btm">
-        <div class="col-xs-3 pl15 pr5">
-            <sapn class="pdtb10 display_block">密码：</sapn>
-        </div>
-        <div class="col-xs-9 pr15 pl5">
-            <input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>
+    <div class="input-group input-group-lg">
+        <div class="input-group-addon" style="opacity: 0.6;background-color: black;border: 0px;">
+        <img src="../../Images/account/Account_UserName.png" style="height: 24px;width: 21px;"/></div>
+        <input type="text" class="form-control" id="UserName" name="UserName" placeholder="请输入手机号码" style="background-color: black;opacity: 0.3;border: 0px;font-size: 15px;">
+    </div>
+    <div style="height: 1px;width: 100%"></div>
+    <div class="input-group input-group-lg">
+        <div class="input-group-addon" style="opacity: 0.6;background-color: black;border: 0px;">
+            <img src="../../Images/account/Account_Password.png" style="height: 22px;width: 21px;"/></div>
+        <input type="password" class="form-control" id="Pwd" name="Pwd" placeholder="请输入登录密码" style="background-color: black;opacity: 0.3;border: 0px;font-size: 15px;">
     </div>
     <div class="row pdtb15">
         <div class="col-xs-12 text-right">
@@ -68,10 +83,10 @@
     </div>
     <div class="row">
         <div class="col-xs-6">
-            <a href="Register.html">注册账号</a>
+            <a href="Register.html" style="color: white;">注册账号</a>
         </div>
         <div class="col-xs-6 text-right">
-            <a href="RetrievePassword.html">忘记密码？</a>
+            <a href="RetrievePassword.html" style="color: white;">忘记密码？</a>
         </div>
     </div>
 </div>
