--- a/Views/Account/Register.html
+++ b/Views/Account/Register.html
@@ -54,13 +54,13 @@
         <div class="col-xs-9 pr15 pl5">
             <input type="text" id="Phone" name="Phone" placeholder="请输入手机号码"/></div>
     </div>
-    <!--<div class="row pdtb15 border_btm">-->
-        <!--<div class="col-xs-8 pl15 pr5">-->
-            <!--<input type="text" id="QrCode" name="QrCode" placeholder="请输入右边图形验证码"/></div>-->
-        <!--<div class="col-xs-4 pr15 pl5">-->
-            <!--<canvas class="J_codeimg" style="width: 100%;height: 40px;" id="myCanvas" onclick="createCode()">对不起，您的浏览器不支持canvas，请下载最新版浏览器!</canvas>-->
-        <!--</div>-->
-    <!--</div>-->
+    <div class="row pdtb15 border_btm">
+        <div class="col-xs-8 pl15 pr5">
+            <input type="text" id="QrCode" name="QrCode" placeholder="请输入右边图形验证码"/></div>
+        <div class="col-xs-4 pr15 pl5">
+            <canvas class="J_codeimg" style="width: 100%;height: 40px;" id="myCanvas" onclick="createCode()">对不起，您的浏览器不支持canvas，请下载最新版浏览器!</canvas>
+        </div>
+    </div>
     <div class="row pdtb15 border_btm">
         <div class="col-xs-3 pl15 pr5">
             <span class="pdtb10 display_block">验证码：</span></div>
@@ -96,8 +96,8 @@
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../Framework/layer_mobile/layer.js"></script>
 <script src="../../Scripts/Commen/CourseCommen.js"></script>
-<!--<script src="../../Framework/QrCode/jquery.qrcode.min.js"></script>-->
-<!--<script src="../../Framework/QrCode/verificationNumbers.js"></script>-->
+<script src="../../Framework/QrCode/jquery.qrcode.min.js"></script>
+<script src="../../Framework/QrCode/verificationNumbers.js"></script>
 <script src="../../Scripts/Account/Register.js"></script>
 </body>
 </html>
