--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -44,6 +44,18 @@
             color: #000;
             text-decoration: none;
         }
+        input::-webkit-input-placeholder {
+            color: white !important; /* WebKit browsers */
+        }
+        input:-moz-placeholder {
+            color: white !important; /* Mozilla Firefox 4 to 18 */
+        }
+        input::-moz-placeholder {
+            color: white !important; /* Mozilla Firefox 19+ */
+        }
+        input:-ms-input-placeholder {
+            color: white !important; /* Internet Explorer 10+ */
+        }
     </style>
 </head>
 <body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
@@ -66,15 +78,15 @@
         <p style="font-size: 24px;color: red;">摩英教育</p>
     </div>
     <div class="input-group input-group-lg">
-        <div class="input-group-addon" style="opacity: 0.6;background-color: black;border: 0px;">
+        <div class="input-group-addon" style="opacity: 0.9;background-color: black;border: 0px;">
         <img src="../../Images/account/Account_UserName.png" style="height: 24px;width: 21px;"/></div>
-        <input type="text" class="form-control" id="UserName" name="UserName" placeholder="请输入手机号码" style="background-color: black;opacity: 0.3;border: 0px;font-size: 15px;">
+        <input type="text" class="form-control" id="UserName" name="UserName" placeholder="请输入手机号码" style="background-color: black;opacity: 0.6;border: 0px;font-size: 15px;color: white;">
     </div>
     <div style="height: 1px;width: 100%"></div>
     <div class="input-group input-group-lg">
-        <div class="input-group-addon" style="opacity: 0.6;background-color: black;border: 0px;">
+        <div class="input-group-addon" style="opacity: 0.9;background-color: black;border: 0px;">
             <img src="../../Images/account/Account_Password.png" style="height: 22px;width: 21px;"/></div>
-        <input type="password" class="form-control" id="Pwd" name="Pwd" placeholder="请输入登录密码" style="background-color: black;opacity: 0.3;border: 0px;font-size: 15px;">
+        <input type="password" class="form-control" id="Pwd" name="Pwd" placeholder="请输入登录密码" style="background-color: black;opacity: 0.6;border: 0px;font-size: 15px;color: white;">
     </div>
     <div class="row pdtb15">
         <div class="col-xs-12 text-right">
