sign.html 星号位置更改

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -30,8 +30,8 @@
 	</div>
 	<div class="sign">
 		<p class="title">报名信息</p>
-		<di class="row text_row">
-			<div class="col-xs-4"><span class="text">学员手机</span><span style="color: red">*</span></div>
+		<div class="row text_row">
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">学员手机</span></div>
 			<div class="col-xs-8"><input class="input" id="tel" type="text" ></div>
 		</div>
 		<div class="row">
@@ -39,11 +39,11 @@
 			<div class="col-xs-8"><input class="input" id="email" type="text"></div>
 		</div>
 		<div class="row" id="name_text">
-			<div class="col-xs-4"><span class="text">学员姓名</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">学员姓名</span></div>
 			<div class="col-xs-8"><input class="input" id="name" type="text"></div>
 		</div>
 		<div class="row">
-			<div class="col-xs-4"><span class="text">性别</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">性别</span></div>
 			<div class="col-xs-8">
 				<div class="radio">
                   <label>
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 		<div  class="row" id="school_text">
-			<div class="col-xs-4"><span class="text">就读学校</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">就读学校</span></div>
 			<div class="col-xs-8"><input class="input" id="school" type="text"></div>
 		</div>
 		<div  class="row" id="grade_text">
@@ -70,7 +70,7 @@
 			<div class="col-xs-8"><input class="input" id="class" type="text"></div>
 		</div>
 		<div  class="row">
-			<div class="col-xs-4"><span class="text">出生日期</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">出生日期</span></div>
 			<div class="col-xs-8">
 				<input class="input" id="birth" type="text">
 				<p style="color: gray">例如:2001-01-01</p>
@@ -80,19 +80,19 @@
 
 	<div class="other">
 		<div  class="row" id="f_name_text">
-			<div class="col-xs-4"><span class="text">父亲姓名</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">父亲姓名</span></div>
 			<div class="col-xs-8"><input class="input" id="f_name" type="text"></div>
 		</div>
 		<div  class="row" id="f_tel_text">
-			<div class="col-xs-4"><span class="text">父亲手机</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">父亲手机</span></div>
 			<div class="col-xs-8"><input class="input" id="f_tel" type="text"></div>
 		</div>
 		<div  class="row" id="m_name_text">
-			<div class="col-xs-4"><span class="text">母亲姓名</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">母亲姓名</span></div>
 			<div class="col-xs-8"><input class="input" id="m_name" type="text"></div>
 		</div>
 		<div  class="row" id="m_tel_text">
-			<div class="col-xs-4"><span class="text">母亲手机</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">母亲手机</span></div>
 			<div class="col-xs-8"><input class="input" id="m_tel" type="text"></div>
 		</div>
 		<div  class="row">
@@ -100,7 +100,7 @@
 			<div class="col-xs-8"><input class="input" id="telephone" type="text"></div>
 		</div>
 		<div  class="row">
-			<div class="col-xs-4"><span class="text">快递详细地址</span><span style="color: red">*</span></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">快递详细地址</span></div>
 			<div class="col-xs-8"><input class="input" id="address" type="text"></div>
 		</div>
 		<div  class="row" id="inputter">
