修改了第一条

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -123,22 +123,22 @@
 			<div class="col-xs-8 channel-row">
 				<div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio"  value="1">演讲
+                    <input id="channel_radio1" type="radio" name="channelRadio"  value="1">演讲
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio"  value="2">网络搜索
+                    <input id="channel_radio2" type="radio" name="channelRadio"  value="2">网络搜索
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio"  value="3">摩英教育微信公众账号
+                    <input id="channel_radio3" type="radio" name="channelRadio"  value="3">摩英教育微信公众账号
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="channelRadio"  value="4">微信朋友圈
+                    <input id="channel_radio4" type="radio" name="channelRadio"  value="4">微信朋友圈
                   </label>
                 </div>
                  <div class="radio">
