添加调查问卷

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -189,6 +189,38 @@
           </label>
         </div> -->
 	</div>
+	<div class="question" id="question-div">
+		<div>以下内容请务必认真填写，确保内容真实，便于讲师和助教针对性辅导您的孩子，帮助他成长。谢谢您的配合。</div>
+			<div>
+				<span style="color:gray;">1.您最希望孩子在现阶段改掉的坏习惯，养成的好习惯有哪些？</span>
+				<textarea class="q1" style="width:100%; resize:none;" ></textarea>
+			</div>
+			<div>
+				<span style="color:gray;">2.孩子目前在班级中学习成绩处于班级上、中、下哪一等？最近一年的变化情况是怎样的？</span>
+				<textarea class="q2" style="width:100%; resize:none;" ></textarea>
+			</div>
+			<div>
+				<span style="color:gray;">3.孩子目前在班级、社团或学生会担任的什么领导职位？或参加过哪些比赛，获得什么级别的什么奖项？</span>
+				<textarea class="q3" style="width:100%; resize:none;" ></textarea>
+			</div>
+			<div>
+				<span style="color:gray;">4.孩子的兴趣、爱好、特长有哪些？最喜欢的偶像是谁？</span>
+				<textarea class="q4" style="width:100%; resize:none;" ></textarea>
+			</div>
+			<div>
+				<span style="color:gray;">5.用3~5个词概括孩子的性格特点。</span>
+				<textarea class="q5" style="width:100%; resize:none;" ></textarea>
+			</div>
+			<div>
+				<span style="color:gray;">6.最近一年孩子动过什么手术？身体有什么不适？对什么食物敏？或注明其他需要老师特别注意的地方。</span>
+				<textarea class="q6" style="width:100%; resize:none;" ></textarea>
+			</div>
+			<div>
+				<span style="color:gray;">7.如果方便，请注明孩子现有的坏习惯可能的成因，及家庭环境的特殊情况，如：单亲家庭，父母或他人曾对孩子有过暴力行为，或由爷爷奶奶带大等。</span>
+				<textarea class="q7" style="width:100%; resize:none;" ></textarea>
+			</div>
+
+	</div>
 	
 	<div class="sure">
 		<center>
