--- a/Css/book/sign.css
+++ b/Css/book/sign.css
@@ -54,6 +54,11 @@
 	height: 100px;
 }
 
+.question {
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
 .sureButton {
 	margin-left: 20px;
 	margin-right: 20px;
