修改调查问卷界面细节

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -190,7 +190,7 @@
         </div> -->
 	</div>
 	<div class="question" id="question-div">
-		<div>以下内容请务必认真填写，确保内容真实，便于讲师和助教针对性辅导您的孩子，帮助他成长。谢谢您的配合。</div>
+		<div style="margin-bottom: 8px">以下内容请务必认真填写，确保内容真实，便于讲师和助教针对性辅导您的孩子，帮助他成长。谢谢您的配合。</div>
 			<div>
 				<span style="color:gray;">1.您最希望孩子在现阶段改掉的坏习惯，养成的好习惯有哪些？</span>
 				<textarea class="q1" style="width:100%; resize:none;" ></textarea>
