--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -143,7 +143,12 @@
                 </div>
                  <div class="radio">
                   <label>
-                    <input id="other_radio"  type="radio" name="channelRadio"  value="5">其他学员介绍
+                    <input id="other_radio5"  type="radio" name="channelRadio"  value="5">其他学员介绍
+                  </label>
+                </div>
+                 <div class="radio">
+                  <label>
+                    <input id="other_radio6"  type="radio" name="channelRadio"  value="6">智慧家长一阶课程
                   </label>
                 </div>
 			</div>
