--- a/Views/Account/Login.html
+++ b/Views/Account/Login.html
@@ -10,95 +10,77 @@
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../Css/Account/Login.css">
     <style>
-        .pl5 {
-            padding-left: 5px
-        }
-
-        .pr5 {
-            padding-right: 5px
-        }
-
-        .pl15 {
-            padding-left: 15px;
-        }
-
-        .pr15 {
-            padding-right: 15px;
-        }
-
-        .pdtb10 {
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-
-        .pdtb15 {
-            padding-top: 15px;
-            padding-bottom: 15px;
-        }
-
-        .display_block {
-            display: block
-        }
-
         a {
-            color: #000;
+            color: #333;
             text-decoration: none;
         }
+
         input::-webkit-input-placeholder {
-            color: white !important; /* WebKit browsers */
+            color: #999 !important; /* WebKit browsers */
         }
+
         input:-moz-placeholder {
-            color: white !important; /* Mozilla Firefox 4 to 18 */
+            color: #999 !important; /* Mozilla Firefox 4 to 18 */
         }
+
         input::-moz-placeholder {
-            color: white !important; /* Mozilla Firefox 19+ */
+            color: #999 !important; /* Mozilla Firefox 19+ */
         }
+
         input:-ms-input-placeholder {
-            color: white !important; /* Internet Explorer 10+ */
+            color: #999 !important; /* Internet Explorer 10+ */
         }
+
+        input {
+            background: transparent;
+            border: none;
+            border-bottom: 1px solid #ddd;
+            border-radius: 0px;
+        }
+
+        .container {
+            width: 80%
+        }
+        .row{margin-top: 10px;}
     </style>
 </head>
 <body style="background: url('../../Images/account/Account_Background.png') no-repeat;background-size: 100%;">
 <div class="container">
     <!--<div class="row pdtb15 border_btm">-->
-        <!--<div class="col-xs-3 pl15 pr5">-->
-            <!--<span class="pdtb10 display_block">手机号：</span></div>-->
-        <!--<div class="col-xs-9 pr15 pl5">-->
-            <!--<input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>-->
+    <!--<div class="col-xs-3 pl15 pr5">-->
+    <!--<span class="pdtb10 display_block">手机号：</span></div>-->
+    <!--<div class="col-xs-9 pr15 pl5">-->
+    <!--<input type="text" id="UserName" name="UserName" placeholder="请输入手机号码"/></div>-->
     <!--</div>-->
     <!--<div class="row pdtb15 border_btm">-->
-        <!--<div class="col-xs-3 pl15 pr5">-->
-            <!--<sapn class="pdtb10 display_block">密码：</sapn>-->
-        <!--</div>-->
-        <!--<div class="col-xs-9 pr15 pl5">-->
-            <!--<input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>-->
+    <!--<div class="col-xs-3 pl15 pr5">-->
+    <!--<sapn class="pdtb10 display_block">密码：</sapn>-->
     <!--</div>-->
-    <div style="text-align: center;padding-bottom: 50px;padding-top: 60px;">
-        <img src="../../Images/account/Account_Logo.png" style="height: 103px;width: 97px;"/>
-        <p style="font-size: 24px;color: red;">摩英教育</p>
+    <!--<div class="col-xs-9 pr15 pl5">-->
+    <!--<input type="password" id="Pwd" name="Pwd" placeholder="请输入登录密码"/></div>-->
+    <!--</div>-->
+    <div style="text-align: center;padding-bottom: 20px;padding-top: 30px;">
+        <img src="../../Images/account/Account_Logo.png" style="height: 75px;width: 75px;"/>
+        <p style="font-size: 16px;color: #F24C4C; font-family: 华文新魏">摩英教育</p>
     </div>
-    <div class="input-group input-group-lg">
-        <div class="input-group-addon" style="opacity: 0.9;background-color: black;border: 0px;border-bottom-left-radius: 0px;">
-        <img src="../../Images/account/Account_UserName.png" style="height: 24px;width: 21px;"/></div>
-        <input type="text" class="form-control" id="UserName" name="UserName" placeholder="请输入手机号码" style="background-color: black;opacity: 0.6;border: 0px;font-size: 15px;color: white;border-bottom-right-radius: 0px;">
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <input type="text" id="UserName" name="UserName" autocomplete="off" placeholder="请输入手机号码"/></div>
     </div>
-    <div style="height: 1px;width: 100%"></div>
-    <div class="input-group input-group-lg">
-        <div class="input-group-addon" style="opacity: 0.9;background-color: black;border: 0px;border-top-left-radius: 0px;">
-            <img src="../../Images/account/Account_Password.png" style="height: 22px;width: 21px;"/></div>
-        <input type="password" class="form-control" id="Pwd" name="Pwd" placeholder="请输入登录密码" style="background-color: black;opacity: 0.6;border: 0px;font-size: 15px;color: white;border-top-right-radius: 0px;">
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <input type="password" id="Pwd" name="Pwd" autocomplete="off" placeholder="请输入登录密码"/></div>
     </div>
-    <div class="row pdtb15">
-        <div class="col-xs-12 text-right">
-            <button id="btnLogin">登 录</button>
-        </div>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+           <button id="btnLogin">登 录</button></div>
     </div>
     <div class="row">
         <div class="col-xs-6">
-            <a href="Register.html" style="color: white;">注册账号</a>
+            <a href="Register.html" style="font-size: 12px;">注册账号</a>
         </div>
         <div class="col-xs-6 text-right">
-            <a href="RetrievePassword.html" style="color: white;">忘记密码？</a>
+            <a href="RetrievePassword.html" style="font-size: 12px;">忘记密码？</a>
         </div>
     </div>
 </div>
