--- a/Views/Admin/Course/CourseList.html
+++ b/Views/Admin/Course/CourseList.html
@@ -52,6 +52,7 @@
 </div>
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
 <script src="../../../Scripts/Admin/CourseList.js"></script>
