修改sign.js 中的必填项

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -104,7 +104,7 @@
 			<div class="col-xs-8"><input class="input" id="address" type="text"></div>
 		</div>
 		<div  class="row" id="inputter">
-			<div class="col-xs-4"><p class="text">填表人</p></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">填表人</span></div>
 			<div class="col-xs-8">
 				<div class="radio">
                   <label>
@@ -119,7 +119,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-4"><p class="text">你是通过什么渠道了解我们的</p></div>
+			<div class="col-xs-4"><span style="color: red">*</span><span class="text">你是通过什么渠道了解我们的</span></div>
 			<div class="col-xs-8 channel-row">
 				<div class="radio">
                   <label>
