修改渠道中智慧家长隐藏问题

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -141,7 +141,7 @@
                     <input id="channel_radio4" type="radio" name="channelRadio"  value="4">微信朋友圈
                   </label>
                 </div>
-                <div class="radio">
+                <div class="radio_zhihui_div">
                   <label>
                     <input id="other_radio6"  type="radio" name="channelRadio"  value="6">智慧家长一阶课程
                   </label>
