--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -17,6 +17,7 @@
   </style>
 </head>
 <body>
+	<div class="container">
 	<div class="top" style="margin-top: 0">
 		<div style="text-align: center;" ><h3 id="course_title"></h3></div>
 		<div class="container">
@@ -100,8 +101,8 @@
 			<div class="col-xs-8"><input class="input" id="telephone" type="text"></div>
 		</div>
 		<div  class="row">
-			<div class="col-xs-4"><span style="color: red">*</span><span class="text">快递详细地址</span></div>
-			<div class="col-xs-8"><input class="input" id="address" type="text"></div>
+			<div ><span style="color: red">*</span><span class="text">快递详细地址</span></div>
+			<div ><input class="input" id="address" type="text"></div>
 		</div>
 		<div  class="row" id="inputter">
 			<div class="col-xs-4"><span style="color: red">*</span><span class="text">填表人</span></div>
@@ -119,8 +120,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-4"><span style="color: red">*</span><span class="text">你是通过什么渠道了解我们的</span></div>
-			<div class="col-xs-8 channel-row">
+			<div><span style="color: red">*</span><span class="text">你是通过什么渠道了解我们的</span></div>
+			<div class="channel-row">
 				<div class="radio">
                   <label>
                     <input id="channel_radio1" type="radio" name="channelRadio"  value="1">演讲
@@ -238,8 +239,8 @@
     <script src="../../Scripts/Commen/CourseCommen.js"></script>
     <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
     <script src="../../Framework/layer_mobile/layer.js"></script>
-	<!-- <script src="../../Scripts/Commen/CheckUserLogin.js"></script> -->
+	<script src="../../Scripts/Commen/CheckUserLogin.js"></script>
     <script src="../../Scripts/book/sign.js"></script>
-
+</div>
 </body>
 </html>
