修改sign界面排版

--- a/Css/book/sign.css
+++ b/Css/book/sign.css
@@ -43,6 +43,10 @@
 
 .input {
 	margin-bottom: 10px;
+	height: 40px;
+	border-radius: 3px;
+	padding-left: 5px;
+	border: 1px solid #eee;
 }
 
 .radio {
