修改sign界面排版

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -102,7 +102,7 @@
 		</div>
 		<div  class="row">
 			<div ><span style="color: red">*</span><span class="text">快递详细地址</span></div>
-			<div ><input class="input" id="address" type="text"></div>
+			<div 	><input class="input" id="address" type="text" style="width: 100%"></div>
 		</div>
 		<div  class="row" id="inputter">
 			<div class="col-xs-4"><span style="color: red">*</span><span class="text">填表人</span></div>
@@ -120,8 +120,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div><span style="color: red">*</span><span class="text">你是通过什么渠道了解我们的</span></div>
-			<div class="channel-row">
+			<div class="col-xs-12"><span style="color: red">*</span><span class="text">你是通过什么渠道了解我们的</span></div>
+			<div class="channel-row col-xs-12">
 				<div class="radio">
                   <label>
                     <input id="channel_radio1" type="radio" name="channelRadio"  value="1">演讲
