修改sign界面排版

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -101,8 +101,8 @@
 			<div class="col-xs-8"><input class="input" id="telephone" type="text"></div>
 		</div>
 		<div  class="row">
-			<div ><span style="color: red">*</span><span class="text">快递详细地址</span></div>
-			<div 	><input class="input" id="address" type="text" style="width: 100%"></div>
+			<div class="col-xs-12" ><span style="color: red">*</span><span class="text">快递详细地址</span></div>
+			<div class="col-xs-12"	><input class="input" id="address" type="text" style="width: 100%"></div>
 		</div>
 		<div  class="row" id="inputter">
 			<div class="col-xs-4"><span style="color: red">*</span><span class="text">填表人</span></div>
