--- a/Views/Admin/Phase/PhaseEdit.html
+++ b/Views/Admin/Phase/PhaseEdit.html
@@ -173,6 +173,7 @@
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
 <script src="../../../Framework/laydate-v1.1/laydate/laydate.js"></script>
+<script src="../../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Scripts/Admin/PhaseEdit.js"></script>
 </body>
