--- a/Views/Admin/Order/PhaseOrder.html
+++ b/Views/Admin/Order/PhaseOrder.html
@@ -112,6 +112,7 @@
 
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
 <script src="../../../Framework/laypage-v1.3/laypage/laypage.js"></script>
