--- a/Views/Admin/Teacher/TeacherList.html
+++ b/Views/Admin/Teacher/TeacherList.html
@@ -57,6 +57,7 @@
 </div>
 <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
 <script src="../../../Scripts/Admin/TeacherList.js"></script>
