--- a/Views/Admin/User/UserEdit.html
+++ b/Views/Admin/User/UserEdit.html
@@ -178,6 +178,7 @@
 <script src="../../../Framework/bootstrap-fileinput/js/fileinput_locale_zh.js"></script>
 <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
+<script src="../../../Framework/jquery-cookies/jquery.cookie.js"></script>
 <script src="../../../Scripts/Commen/CourseCommen.js"></script>
 <script src="../../../Framework/summernote/summernote.min.js"></script>
 <script src="../../../Framework/summernote/lang/summernote-zh-CN.js"></script>
