--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -157,7 +157,7 @@
 		</div>
 	</div>
 
-	<div class="zengzhi">
+	<div class="zengzhi" id="zengzhi">
 		<!-- <p class="zengzhi_title">请选择您的增值服务</p>
 		<div class="radio">
             <label>
