修改sign.js中课程报名参数问题

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -31,11 +31,11 @@
 	</div>
 	<div class="sign">
 		<p class="title">报名信息</p>
-		<div class="row text_row">
+		<div class="row text_row" id="stu_tel_row">
 			<div class="col-xs-4"><span style="color: red">  *</span><span class="text">学员手机</span></div>
 			<div class="col-xs-8"><input class="input" id="tel" type="text" ></div>
 		</div>
-		<div class="row">
+		<div class="row" id="email_row">
 			<div class="col-xs-4"><p class="text">电子邮件</p></div>
 			<div class="col-xs-8"><input class="input" id="email" type="text"></div>
 		</div>
@@ -43,7 +43,7 @@
 			<div class="col-xs-4"><span style="color: red">  *</span><span class="text">学员姓名</span></div>
 			<div class="col-xs-8"><input class="input" id="name" type="text"></div>
 		</div>
-		<div class="row">
+		<div class="row" id="stu_sex_row">
 			<div class="col-xs-4"><span style="color: red">*</span><span class="text">性别</span></div>
 			<div class="col-xs-8">
 				<div class="radio">
@@ -70,7 +70,7 @@
 			<div class="col-xs-4"><p class="text">就读班级</p></div>
 			<div class="col-xs-8"><input class="input" id="class" type="text"></div>
 		</div>
-		<div  class="row">
+		<div  class="row" id="stu_birth">
 			<div class="col-xs-4"><span style="color: red">*</span><span class="text">出生日期</span></div>
 			<div class="col-xs-8">
 				<input class="input" id="birth" type="text">
@@ -96,7 +96,7 @@
 			<div class="col-xs-4"><span style="color: red">*</span><span class="text">母亲手机</span></div>
 			<div class="col-xs-8"><input class="input" id="m_tel" type="text"></div>
 		</div>
-		<div  class="row">
+		<div  class="row" id="stu_telephone">
 			<div class="col-xs-4"><p class="text">宅电</p></div>
 			<div class="col-xs-8"><input class="input" id="telephone" type="text"></div>
 		</div>
