家长课程去除学生相关信息

--- a/Views/book/sign.html
+++ b/Views/book/sign.html
@@ -96,7 +96,7 @@
 			<div class="col-xs-4"><span style="color: red">*</span><span class="text">母亲手机</span></div>
 			<div class="col-xs-8"><input class="input" id="m_tel" type="text"></div>
 		</div>
-		<div  class="row" id="stu_telephone">
+		<div  class="row" id="stu_phone">
 			<div class="col-xs-4"><p class="text">宅电</p></div>
 			<div class="col-xs-8"><input class="input" id="telephone" type="text"></div>
 		</div>
