--- a/Views/Admin/Order/PhaseOrder.html
+++ b/Views/Admin/Order/PhaseOrder.html
@@ -39,7 +39,7 @@
             <input type="text" style="width: 50%" id="SearchKey" placeholder="请输入搜索关键字"/>
             <button id="btnSearch">搜 索</button>
             <button id="btnAdd">手动录入</button>
-            <button id="btnImport">导出Excel</button>
+            <button id="btnImport">导出</button>
         </div>
     </div>
     <div class="row" style="padding: 10px;background: #e5e5e5">
