--- a/Views/Admin/Manage/Login.html
+++ b/Views/Admin/Manage/Login.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <style>
-        .header{
+        .header {
             position: relative;
             height: 323px;
             width: 100%;
             background-color: #00b38a;
         }
+
         .logo {
             /*background: url("../../../Images/logo.png") left top no-repeat;*/
             position: absolute;
@@ -23,6 +24,7 @@
             width: 216px;
             height: 45px;
         }
+
         .content {
             position: relative;
             z-index: 1;
@@ -35,30 +37,40 @@
             box-shadow: 1px 1px 10px 1px #888888
             /*border:#F5F5F5 solid thin;*/
         }
+
         .cleafix {
             clear: both;
             zoom: 1;
         }
+
         .input_area {
             margin-left: 30px;
             margin-right: 30px;
         }
+
         .button_area {
             margin-left: 30px;
             margin-right: 30px;
             padding-top: 30px;
         }
+
+        .button_area button {
+            width: 100%
+        }
+
         .footer_bottomtext {
             padding-top: 30px;
             text-align: center;
             color: #dddddd;
             font-size: 18px;
         }
+
         .button_login {
             border-radius: 4px;
             height: 50px;
             font-size: 18px;
         }
+
         .input_login {
             border: 0px;
             background-color: #f8f8f8;
