--- a/Views/Admin/Teacher/TeacherList.html
+++ b/Views/Admin/Teacher/TeacherList.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <style>
-        button {
-            width: 70px;
-            height: 30px
-        }
-
         select {
             height: 40px;
             border: 1px solid #dddddd;
@@ -44,7 +39,7 @@
             <h4><strong>教师管理</strong></h4>
         </div>
         <div class="col-xs-6 text-right">
-            <button id="btnAdd" onclick="window.location.href='TeacherEdit.html'" style="margin-top: 5px">新 增</button>
+            <button class="button70X30" id="btnAdd" onclick="window.location.href='TeacherEdit.html'" style="margin-top: 5px">新 增</button>
         </div>
     </div>
     <div class="row" style="padding: 10px;background: #e5e5e5">
