--- a/Views/Admin/Course/CourseList.html
+++ b/Views/Admin/Course/CourseList.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <style>
-        button {
-            width: 70px;
-            height: 30px
-        }
+
 
         select {
             height: 40px;
@@ -38,8 +35,8 @@
         </div>
         <div class="col-xs-6 text-right">
             <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字" />
-            <button id="btnSearch">搜 索</button>
-            <button id="btnAdd" onclick="window.location.href='CourseEdit.html'">新 增</button>
+            <button class="button70X30" id="btnSearch">搜 索</button>
+            <button class="button70X30" id="btnAdd" onclick="window.location.href='CourseEdit.html'">新 增</button>
         </div>
     </div>
     <div class="row" style="padding: 10px;background: #e5e5e5">
