--- a/Views/Admin/CourseType/CourseTypeList.html
+++ b/Views/Admin/CourseType/CourseTypeList.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <style>
-        button {
-            width: 60px;
-            height: 30px
-        }
-
         select {
             height: 40px;
             border: 1px solid #dddddd;
@@ -37,7 +32,7 @@
             <h4><strong>课程类型管理</strong></h4>
         </div>
         <div class="col-xs-6 text-right">
-            <button id="btnAdd">新 增</button>
+            <button class="button70X30" id="btnAdd">新 增</button>
         </div>
     </div>
     <div class="row" style="padding: 10px;background: #e5e5e5">
