--- a/Views/Admin/Order/PhaseOrder.html
+++ b/Views/Admin/Order/PhaseOrder.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" href="../../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../../Css/Admin/Comm.css">
     <style>
-        button {
-            width: 70px;
-            height: 30px
-        }
 
         * {
             font-size: 13px !important;
         }
+
     </style>
 </head>
 <body>
@@ -36,10 +33,10 @@
             </select>
         </div>
         <div class="col-xs-5 text-right">
-            <input type="text" style="width: 50%" id="SearchKey" placeholder="请输入搜索关键字"/>
-            <button id="btnSearch">搜 索</button>
-            <button id="btnAdd">手动录入</button>
-            <button id="btnImport">导出</button>
+            <input type="text" class="input" style="width: 50%" id="SearchKey" placeholder="请输入搜索关键字"/>
+            <button class="button70X30" id="btnSearch">搜 索</button>
+            <button class="button70X30" id="btnAdd">手动录入</button>
+            <button class="button70X30" id="btnImport">导出</button>
         </div>
     </div>
     <div class="row" style="padding: 10px;background: #e5e5e5">
@@ -76,7 +73,7 @@
             <div class="col-xs-12">已交食宿费：</div>
         </div>
         <div class="row">
-            <div class="col-xs-12"><input type="text" id="money"/></div>
+            <div class="col-xs-12"><input class="input" type="text" id="money"/></div>
         </div>
     </div>
 </div>
@@ -86,7 +83,7 @@
             <div class="col-xs-12">班级：</div>
         </div>
         <div class="row">
-            <div class="col-xs-12"><input type="text" id="className"/></div>
+            <div class="col-xs-12"><input class="input" type="text" id="className"/></div>
         </div>
     </div>
 </div>
@@ -107,6 +104,13 @@
                 </select>
             </div>
         </div>
+    </div>
+</div>
+
+<!--可转期列表-->
+<div style="display: none;" id="Phase_ChangeBox">
+    <div class="container" style="width: 280px;height: 150px;">
+
     </div>
 </div>
 
